[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-graphrag-mcp"
version = "0.2.4"
description = "GraphRAG-based MCP server: builds a repository knowledge graph (Tree-sitter + LightRAG) for Q&A and change planning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "lightrag-hku==1.4.9.11",
    "anthropic==0.77.1",
    "openai==1.106.1",
    "google-genai==1.33.0",
    "torch==2.10.0",
    "numpy==2.4.2",
    "tokenizers==0.22.2",
    "sentence-transformers==5.2.2",
    "faiss-cpu==1.12.0",
    "transformers==5.0.0",
    "python-dotenv==1.1.1",
    "fastmcp>=2.12.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-css>=0.23.2",
]

[project.scripts]
repo-graphrag-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["repo_graphrag"]
include = [
    "server.py",
    "repo_graphrag/**/*",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


